# Executive

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Executive.Dynamic.Debug  Executive.Modular.Debug  Makefile.am  README.md  configure.ac  docker-bake.hcl  reconfigure
.devcontainer/: devcontainer.json  devcontainer.yaml
BuildConfigurations/: DEBUG  DEVELOP  FREE  GENERIC  MINI  RELEASE  SIMULATOR  TRACE
DeveloperTools/idl/: .gitignore  Makefile.am  README.md  comidl.c  configure.ac  emit-cxx.c  emit-mscom-cxxinc.c  emit-sunrpc-cxxinc.c  emit-talisker-cxxinc.c  emit-template-cxxinc.c  emit.c  expr.c  idlparse.y  incpath.c  interface.c  keywords.c  lexidl.l  module.c  p_comidl.h
DeveloperTools/idl/parsers/: Makefile.am
DeveloperTools/idl/parsers/talisker/: .gitignore  Makefile.am  README.md  args.c  idlparse.y  incpath.c  json.c  keywords.c  lexidl.l  module.c  p_parser.h  parser-talisker.c  usage.c  version.c
Frameworks/Executive/IDL/Executive/: Errors.idl  IAddressSpace.idl  IAllocator.idl  IBootEnvironment.idl  IContainer.idl  IContext.idl  IDespatchContext.idl  IDirectoryEntry.idl  IDirectoryEntryTarget.idl  IEvent.idl  IExecutable.idl  IIterator.idl  IJob.idl  ILink.idl  IMutableContainer.idl  INamespace.idl  IObject.idl  IPlatform.idl  IPlatformDiagnostics.idl  IRegion.idl  IRegionHolder.idl  ISubsystem.idl  ITask.idl  ITasker.idl  IThread.idl  IWriteChannel.idl  MDirectoryEntryTarget.idl  MFactory.idl  MObject.idl  Makefile.am  README.md  Types.idl  UUID.idl
Frameworks/Executive/UUIDs/: Classes.c  IBootEnvironment.c  IDirectoryEntry.c  IExecutable.c  ILink.c  IMutableContainer.c  IPlatformDiagnostics.c  ISubsystem.c  MDirectoryEntryTarget.c  MFactory.c  Makefile.am  p_UUIDs.h
Frameworks/PAL/: Makefile.am  PAL-stubs.c
Frameworks/PAL/Headers/: Makefile.am
Frameworks/PAL/Headers/PAL/: Makefile.am  MemoryManager.h  PAL.h  Platform.h  PlatformDiagnostics.h
Frameworks/Runtime/: Allocator.c  Log.c  Makefile.am  Memory.c  Namespace.c  Private.c  Status.c  Strings.c  Task.c  UUID.c  p_Runtime.h
Frameworks/Runtime/Client/: Client.c  IAddressSpace.c  IAllocator.c  IContainer.c  IContext.c  IDirectoryEntry.c  IIterator.c  ILink.c  IMutableContainer.c  INamespace.c  IObject.c  IRegion.c  IRegionHolder.c  ITask.c  IThread.c  IWriteChannel.c  Makefile.am  p_Client.h
Frameworks/Runtime/Headers/Runtime/: IAllocator.h  IObject.h  IRegionHolder.h  IThread.h  Linkage.h  Log.h  Makefile.am  Memory.h  Namespace.h  Runtime.h  Status.h  Strings.h  Task.h  Types.h  UUID.h
Frameworks/Runtime/IDL/: Makefile.am
Frameworks/Runtime/IDL/Runtime/: Makefile.am
Frameworks/Runtime/Server/: IAddressSpace.c  IContainer.c  IDirectoryEntry.c  IIterator.c  ILink.c  INamespace.c  IObject.c  IRegion.c  ITask.c  IThread.c  IWriteChannel.c  Makefile.am
Frameworks/Runtime/UUIDs/: IAddressSpace.c  IAllocator.c  IContainer.c  IContext.c  IDirectoryEntryTarget.c  IIterator.c  INamespace.c  IObject.c  IPlatform.c  IRegion.c  IRegionHolder.c  ITask.c  ITasker.c  IThread.c  IWriteChannel.c  MObject.c  Makefile.am  p_UUIDs.h
Frameworks/Runtime/libc/: Makefile.am  README.md  mainThread.c
Frameworks/Runtime/libc/stdlib/: Makefile.am
PAL/POSIX/: AddressSpace.c  BuildInformation.c  Console-Plain.c  Console.c  Context.c  Makefile.am  MemoryManager.c  Platform.c  PlatformDiagnostics.c  Region.c  config.ac  init.c  metaClass.c  p_AddressSpace.h  p_MemoryManager.h  p_POSIX.h  panic.c
Simulator/: .gitignore  Makefile.am  Startup.c  SysDump.c  SystemCall.c
Simulator/PAL/: AddressSpace.cc  BuildInformation.c  Context.cc  Diagnostics.cc  Makefile.am  Platform.c  Platform.cc  Region.c  Region.cc  init.c  p_PAL.h
Sources/: .gitignore  Allocator.c  BootEnvironment.c  BootstrapTask.c  Classes.c  CooperativeTasker.c  Directory-Entry.c  Directory-IContainer.c  Directory-IDirectoryEntryTarget.c  Directory-IMutableContainer.c  Directory-INamespace.c  Directory-IObject.c  Directory-Iterator.c  Directory-Link.c  Directory-MDirectoryEntryTarget.c  Directory.c  Executive.c  Makefile.am  UUIDs.c  entrypoint.c  p_Executive.h  p_UUIDs.h
Sources/Allocator/: Allocator.c  Makefile.am
Sources/Allocator/dlmalloc/: Makefile.am  malloc.h
Sources/Classes/: Classes-DirectoryEntry.c  Classes-GenericFactory.c  Classes-IContainer.c  Classes-Iterator.c  Classes-Object.c  Classes.c  Makefile.am  p_Classes.h
Sources/CooperativeTasker/: CooperativeTasker-IContainer.c  CooperativeTasker-IObject.c  CooperativeTasker-ITasker.c  CooperativeTasker-Sentinel.c  CooperativeTasker-Task.c  CooperativeTasker-Thread.c  CooperativeTasker.c  Makefile.am  p_CooperativeTasker.h
Sources/Coordinator/: Makefile.am
Sources/Despatch/: Despatch-Context-IObject.c  Despatch-Context-MObject.c  Despatch-Context.c  Gateway.c  IAddressSpace.c  IContainer.c  IDirectoryEntry.c  IIterator.c  ILink.c  INamespace.c  IObject.c  IRegion.c  ITask.c  IThread.c  IWriteChannel.c  Makefile.am  p_Despatch.h
Sources/Directory/: Directory-Cluster.c  Directory-Entry.c  Directory-IContainer.c  Directory-IDirectoryEntryTarget.c  Directory-IMutableContainer.c  Directory-INamespace.c  Directory-IObject.c  Directory-Iterator.c  Directory-Link.c  Directory-Local.c  Directory-MDirectoryEntryTarget.c  Directory-MObject.c  Directory-Network.c  Directory-Root.c  Directory-System.c  Directory.c  Makefile.am  p_Directory.h
Sources/Executive/: Executive-init.c  Executive-runLoop.c  Executive-startup.c  Executive.c  Makefile.am  p_Executive.h
Sources/Glue/linux/: entry.c
Sources/Glue/posix/: Makefile.am  config.ac  entry.i  test-stubs.c
Sources/Runtime/: Debug.c  Diagnostics.c  Makefile.am  Memory.c  Strings.c  UUID.c  config.h  p_Runtime.h
Sources/Runtime/arm64/: Makefile.am
Sources/Runtime/dlmalloc/: malloc.c  malloc.h
Sources/Subsystems/: Makefile.am  README.md  Subsystems.c  p_Subsystems.h
Subsystems/: Makefile.am  Resident.c
Subsystems/Bootstrap/: Bootstrap.c  Makefile.am  README.md  ResidentTask.c  Sentinel.c  Startup.c  p_Bootstrap.h
Subsystems/Stubs/: Makefile.am  Resident-stubs.c
Subsystems/VER/: .gitignore  Makefile.am  VER.c
(+164 files in other folders)
