## Executive Microkernel
## Platform Adaptation Layer Framework
##

## Copyright 2015-2022 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

SUBDIRS = Headers .

noinst_LTLIBRARIES = libPAL.la

libPAL_la_SOURCES = PAL-stubs.c

libPAL_la_LDFLAGS = -avoid-version -rpath $(libdir)
